src/objects/Meeting_Participant_Email_Send_MERC__c.object
<CustomObject>
    <description>Junction object used for custom ExactTarget Email integration for Meetings to associate Meeting Participants to Meeting Email Send records</description>
    <fields>
        <fullName>ET_Email_Name_MERC__c</fullName>
        <description>Pulls in the name of the Email that was sent to the Meeting Participant : MERC : Created on 07/09/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>Meeting_Email_Send__r.ET_Email_Name_MERC__c</formula>
        <label>ET Email Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Email_Send__c</fullName>
        <label>Meeting Email Send</label>
        <referenceTo>Meeting_Email_Send_MERC__c</referenceTo>
        <relationshipLabel>Meeting Participant Email Sends</relationshipLabel>
        <relationshipName>Meeting_Participant_Email_Sends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Meeting Participant Email Sends</relationshipLabel>
        <relationshipName>Meeting_Participant_Email_Sends</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Meeting Participant Email Send</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Meeting Participant Email Send #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Participant Email Sends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>